--- a/public/index.html
+++ b/public/index.html
@@ -25,15 +25,15 @@
   <![endif]-->
 	
   <!-- Place favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-  <link rel="shortcut icon" href="./favicon.ico">
-  <link rel="apple-touch-icon" href="./apple-touch-icon.png">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
 
   <!-- CSS : implied media="all" -->
-	<link rel="stylesheet" href="./css/style.css?v=2">
+	<link rel="stylesheet" href="css/style.css?v=2">
 	<!--link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a1/jquery.mobile-1.0a1.min.css" /-->
-	<style type="text/css" media="screen">@import "./css/jqtouch.css";</style> 
-	<style type="text/css" media="screen">@import "./themes/uscon/theme.css";</style> 
+	<style type="text/css" media="screen">@import "css/jqtouch.css";</style> 
+	<style type="text/css" media="screen">@import "themes/uscon/theme.css";</style> 
 	<!--link rel="stylesheet" href="css/less-framew.css"-->
 
 	<!-- Uncomment if you are specifically targeting less enabled mobile browsers
@@ -45,8 +45,8 @@
   <!--script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js"></script>
   <script>!window.jQuery && document.write(unescape('%3Cscript src="./js/jquery-1.3.2.js"%3E%3C/script%3E'))</script-->
   <!--script src="http://code.jquery.com/mobile/1.0a1/jquery.mobile-1.0a1.min.js"></script-->
-  <script type="text/javascript" src="./js/jquery.1.3.2.min.js"></script>
-  <script type="text/javascript" src="./js/jqtouch.js"></script>
+  <script type="text/javascript" src="js/jquery.1.3.2.min.js"></script>
+  <script type="text/javascript" src="js/jqtouch.js"></script>
   <!--script src="./js/jqtouch.transitions.js"></script-->
   <!--This initializes jQTouch -->
   <script type="text/javascript">
