--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
   </script>
   <!-- scripts concatenated and minified via ant build script-->
   <!-- phonegap -->
-  <script type="text/javascript" src="phonegap.js"></script>
+  <!--script type="text/javascript" src="phonegap.js"></script-->
   <!-- end phonegap -->
 
   <!--script src="js/plugins.js"></script>
@@ -519,8 +519,9 @@ All legislative Powers herein granted shall be vested in a Congress of the Unite
 <ul class="rounded">
 <li class="arrow"><a href="#bofrpre" class="pop">Preamble</a></li>
 <li class="arrow"><a href="#a1-a10" class="pop">Bill of Rights 1-10</a></li>
-<li class="arrow"><a href="#a11-a20" class="pop">Amendments 11-20</a></li>
-<li class="arrow"><a href="#a21-a27" class="pop">Amendments 20-27</a></li>
+<li class="arrow"><a href="#a11-a15" class="pop">Amendments 11-15</a></li>
+<li class="arrow"><a href="#a16-a20" class="pop">Amendments 16-20</a></li>
+<li class="arrow"><a href="#a21-a27" class="pop">Amendments 21-27</a></li>
 </ul>
 		</div>
     </div>
@@ -554,7 +555,20 @@ All legislative Powers herein granted shall be vested in a Congress of the Unite
 		<div class="content">
 <p class="note-top">The following text is a transcription of the first ten amendments to the Constitution in their original form. These amendments were ratified December 15, 1791, and form what is known as the &quot;Bill of Rights.&quot;</p> 
 
-<h3>Amendment I</h3> 
+<ul class="rounded">
+<li class="arrow"><a href="#a1" class="pop">1st Amendment</a></li>
+<li class="arrow"><a href="#a2" class="pop">2nd Amendment</a></li>
+<li class="arrow"><a href="#a3" class="pop">3rd Amendment</a></li>
+<li class="arrow"><a href="#a4" class="pop">4th Amendment</a></li>
+<li class="arrow"><a href="#a5" class="pop">5th Amendment</a></li>
+<li class="arrow"><a href="#a6" class="pop">6th Amendment</a></li>
+<li class="arrow"><a href="#a7" class="pop">7th Amendment</a></li>
+<li class="arrow"><a href="#a8" class="pop">8th Amendment</a></li>
+<li class="arrow"><a href="#a9" class="pop">9th Amendment</a></li>
+<li class="arrow"><a href="#a10" class="pop">10th Amendment</a></li>
+</ul>
+
+<!--h3>Amendment I</h3> 
 <p>Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the Government for a redress of grievances.</p> 
  
 <h3>Amendment II</h3> 
@@ -585,14 +599,138 @@ according to the rules of the common law.</p>
 <p>The enumeration in the Constitution, of certain rights, shall not be construed to deny or disparage others retained by the people.</p> 
  
 <h3>Amendment X</h3> 
-<p>The powers not delegated to the United States by the Constitution, nor prohibited by it to the States, are reserved to the States respectively, or to the people.</p> 
+<p>The powers not delegated to the United States by the Constitution, nor prohibited by it to the States, are reserved to the States respectively, or to the people.</p--> 
             
 		</div>
     </div>
- 
- 	<div id="a11-a20">
+   
+ 	<div id="a1">
 		<div class="toolbar"> 
-			<h1>11-20</h1> 
+			<!--a href="#settings" class="button slideup">Settings</a-->
+			<h1>1st Amendment</h1> 
+  		  	<a href="#" class="back">Back</a>
+			<a href="#home" class="button flip">Home</a> 
+		</div> 
+		<div class="content">
+<h3>Amendment I</h3> 
+<p>Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the Government for a redress of grievances.</p> 
+		</div>
+    </div>
+ 	<div id="a2">
+		<div class="toolbar"> 
+			<!--a href="#settings" class="button slideup">Settings</a-->
+			<h1>2nd Amendment</h1> 
+  		  	<a href="#" class="back">Back</a>
+			<a href="#home" class="button flip">Home</a> 
+		</div> 
+		<div class="content"> 
+<h3>Amendment II</h3> 
+<p>A well regulated Militia, being necessary to the security of a free State, the right of the people to keep and bear Arms, shall not be infringed.</p> 
+ 		</div>
+    </div>
+ 	<div id="a3">
+		<div class="toolbar"> 
+			<!--a href="#settings" class="button slideup">Settings</a-->
+			<h1>3rd Amendment</h1> 
+  		  	<a href="#" class="back">Back</a>
+			<a href="#home" class="button flip">Home</a> 
+		</div> 
+		<div class="content">
+<h3>Amendment III</h3> 
+<p>No Soldier shall, in time of peace be quartered in any house, without the consent of the Owner, nor in time of war, but in a manner to be prescribed by law.</p> 
+ 		</div>
+    </div>
+ 	<div id="a4">
+		<div class="toolbar"> 
+			<!--a href="#settings" class="button slideup">Settings</a-->
+			<h1>4th Amendment</h1> 
+  		  	<a href="#" class="back">Back</a>
+			<a href="#home" class="button flip">Home</a> 
+		</div> 
+		<div class="content">
+<h3>Amendment IV</h3> 
+<p>The right of the people to be secure in their persons, houses, papers, and effects, against unreasonable searches and seizures, shall not be violated, and no Warrants shall issue, but upon probable cause, supported by Oath or affirmation, and particularly describing the place to be searched, and the persons or things to be seized.</p> 
+		</div>
+    </div>
+ 	<div id="a5">
+		<div class="toolbar"> 
+			<!--a href="#settings" class="button slideup">Settings</a-->
+			<h1>5th Amendment</h1> 
+  		  	<a href="#" class="back">Back</a>
+			<a href="#home" class="button flip">Home</a> 
+		</div> 
+		<div class="content">
+<h3>Amendment V</h3> 
+<p>No person shall be held to answer for a capital, or otherwise infamous crime, unless on a presentment or indictment of a Grand Jury, except in cases arising in the land or naval forces, or in the Militia, when in actual service in time of War or public danger; nor shall any person be subject for the same offence to be twice put in jeopardy of life or limb; nor shall be compelled in any criminal case to be a witness against himself, nor be deprived of life, liberty, or property, without due process of law; nor shall private property be taken for public use, without just compensation.</p> 
+ 		</div>
+    </div>
+ 	<div id="a6">
+		<div class="toolbar"> 
+			<!--a href="#settings" class="button slideup">Settings</a-->
+			<h1>6th Amendment</h1> 
+  		  	<a href="#" class="back">Back</a>
+			<a href="#home" class="button flip">Home</a> 
+		</div> 
+		<div class="content">
+<h3>Amendment VI</h3> 
+<p>In all criminal prosecutions, the accused shall enjoy the right to a speedy and public trial, by an impartial jury of the State and district wherein the crime shall have been committed, which district shall have been previously ascertained by law, and to be informed of the nature and cause of the accusation; to be confronted with the witnesses against him; to have compulsory process for obtaining witnesses in his favor, and to have the Assistance of Counsel for his defence.</p> 
+ 		</div>
+    </div>
+ 	<div id="a7">
+		<div class="toolbar"> 
+			<!--a href="#settings" class="button slideup">Settings</a-->
+			<h1>7th Amendment</h1> 
+  		  	<a href="#" class="back">Back</a>
+			<a href="#home" class="button flip">Home</a> 
+		</div> 
+		<div class="content">
+<h3>Amendment VII</h3> 
+<p>In Suits at common law, where the value in controversy shall exceed twenty 
+dollars, the right of trial by jury shall be preserved, and no fact tried by 
+a jury, shall be otherwise re-examined in any Court of the United States, than 
+according to the rules of the common law.</p> 
+ 		</div>
+    </div>
+ 	<div id="a8">
+		<div class="toolbar"> 
+			<!--a href="#settings" class="button slideup">Settings</a-->
+			<h1>8th Amendment</h1> 
+  		  	<a href="#" class="back">Back</a>
+			<a href="#home" class="button flip">Home</a> 
+		</div> 
+		<div class="content">
+<h3>Amendment VIII</h3> 
+<p>Excessive bail shall not be required, nor excessive fines imposed, nor cruel and unusual punishments inflicted.</p> 
+ 		</div>
+    </div>
+ 	<div id="a9">
+		<div class="toolbar"> 
+			<!--a href="#settings" class="button slideup">Settings</a-->
+			<h1>9th Amendment</h1> 
+  		  	<a href="#" class="back">Back</a>
+			<a href="#home" class="button flip">Home</a> 
+		</div> 
+		<div class="content">
+<h3>Amendment IX</h3> 
+<p>The enumeration in the Constitution, of certain rights, shall not be construed to deny or disparage others retained by the people.</p> 
+		</div>
+    </div>
+ 	<div id="a10">
+		<div class="toolbar"> 
+			<!--a href="#settings" class="button slideup">Settings</a-->
+			<h1>10th Amendment</h1> 
+  		  	<a href="#" class="back">Back</a>
+			<a href="#home" class="button flip">Home</a> 
+		</div> 
+		<div class="content">
+<h3>Amendment X</h3> 
+<p>The powers not delegated to the United States by the Constitution, nor prohibited by it to the States, are reserved to the States respectively, or to the people.</p> 
+		</div>
+    </div>
+
+ 	<div id="a11-a15">
+		<div class="toolbar"> 
+			<h1>11th-15th</h1> 
   		  	<a href="#" class="back">Back</a>
 			<a href="#home" class="button flip">Home</a> 
 		</div> 
@@ -643,6 +781,17 @@ The right of citizens of the United States to vote shall not be denied or abridg
 <p><strong>Section 2.</strong><br> 
 The Congress shall have the power to enforce this article by appropriate legislation.</p> 
 </blockquote> 
+
+		</div>
+    </div>
+    
+ 	<div id="a16-a20">
+		<div class="toolbar"> 
+			<h1>16th-20th</h1> 
+  		  	<a href="#" class="back">Back</a>
+			<a href="#home" class="button flip">Home</a> 
+		</div> 
+		<div class="content">
 
 <h3>Amendment XVI</h3> 
 <p><i>Passed by Congress July 2, 1909. Ratified February 3, 1913.</i></p> 
