--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <meta name="keywords" content="United States Constitution, Bill of Rights, Declaration of Independence mobile, we, app">
 
   <!--  Mobile viewport optimized: j.mp/bplateviewport -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
   <!--[if lt IE 9]>
    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,7 +65,7 @@
 
 </head>
 
-<body onLoad="onLoad()">
+<body onload="covers.addCovers()" ontouchmove="event.preventDefault()">
 
 	<div id="home" class="current"> 
 		<div class="toolbar"> 
