--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,8 @@
   <!--script type="text/javascript" src="phonegap.js"></script-->
   <!-- end phonegap -->
 
-  <!--script src="js/plugins.js"></script>
-  <script src="js/script.js"></script-->
+  <script src="js/plugins.js"></script>
+  <!--script src="js/script.js"></script-->
  
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <script src="js/libs/modernizr-1.6.min.js"></script>
