added toolbar vellum background and back and home buttons

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 
 </head>
 
-<body onload="covers.addCovers()" ontouchmove="event.preventDefault()">
+<body onLoad="covers.addCovers()" ontouchmove="event.preventDefault()">
 
 	<div id="home" class="current"> 
 		<div class="toolbar"> 
@@ -174,7 +174,7 @@
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>Preamble</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div>
     	<div class="content">    
 		<p>We the People of the United States, in Order to form a more perfect Union, establish Justice, insure domestic Tranquility, provide for the common defence, promote the general Welfare, and secure the Blessings of Liberty to ourselves and our Posterity, do ordain and establish this Constitution for the United States of America.</p>
@@ -212,7 +212,7 @@ var v = document.getElementById("movie");
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>Article I</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div>
     	<div class="content">
 <h3>The Legislative Branch</h3>
@@ -349,7 +349,7 @@ All legislative Powers herein granted shall be vested in a Congress of the Unite
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>Article II</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div>
     	<div class="content">    
 <h3>The Executive Branch</h3>
@@ -395,7 +395,7 @@ All legislative Powers herein granted shall be vested in a Congress of the Unite
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>Article III</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div>
     	<div class="content">    
 <h3>The Judicial Branch</h3>
@@ -424,7 +424,7 @@ All legislative Powers herein granted shall be vested in a Congress of the Unite
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>Article IV</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div>
     	<div class="content">    
 <h3>The States</h3>
@@ -459,7 +459,7 @@ All legislative Powers herein granted shall be vested in a Congress of the Unite
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>Article V</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div>
     	<div class="content">    
 <h3>Amendments</h3>
@@ -474,7 +474,7 @@ All legislative Powers herein granted shall be vested in a Congress of the Unite
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>Article VI</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div>
     	<div class="content">    
 <h3>Debts, Supremacy, Oaths</h3>
@@ -493,7 +493,7 @@ All legislative Powers herein granted shall be vested in a Congress of the Unite
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>Article VII</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div>
     	<div class="content">    
 <h3>Ratification</h3>
@@ -531,7 +531,7 @@ All legislative Powers herein granted shall be vested in a Congress of the Unite
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>Preamble</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div> 
 		<div class="content">
 <h3>The Preamble to The Bill of Rights</h3> 
@@ -550,7 +550,7 @@ All legislative Powers herein granted shall be vested in a Congress of the Unite
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>Bill of Rights</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div> 
 		<div class="content">
 <p class="note-top">The following text is a transcription of the first ten amendments to the Constitution in their original form. These amendments were ratified December 15, 1791, and form what is known as the &quot;Bill of Rights.&quot;</p> 
@@ -609,7 +609,7 @@ according to the rules of the common law.</p>
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>1st Amendment</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div> 
 		<div class="content">
 <h3>Amendment I</h3> 
@@ -621,7 +621,7 @@ according to the rules of the common law.</p>
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>2nd Amendment</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div> 
 		<div class="content"> 
 <h3>Amendment II</h3> 
@@ -633,7 +633,7 @@ according to the rules of the common law.</p>
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>3rd Amendment</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div> 
 		<div class="content">
 <h3>Amendment III</h3> 
@@ -645,7 +645,7 @@ according to the rules of the common law.</p>
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>4th Amendment</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div> 
 		<div class="content">
 <h3>Amendment IV</h3> 
@@ -657,7 +657,7 @@ according to the rules of the common law.</p>
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>5th Amendment</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div> 
 		<div class="content">
 <h3>Amendment V</h3> 
@@ -669,7 +669,7 @@ according to the rules of the common law.</p>
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>6th Amendment</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div> 
 		<div class="content">
 <h3>Amendment VI</h3> 
@@ -681,7 +681,7 @@ according to the rules of the common law.</p>
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>7th Amendment</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div> 
 		<div class="content">
 <h3>Amendment VII</h3> 
@@ -696,7 +696,7 @@ according to the rules of the common law.</p>
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>8th Amendment</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div> 
 		<div class="content">
 <h3>Amendment VIII</h3> 
@@ -708,7 +708,7 @@ according to the rules of the common law.</p>
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>9th Amendment</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div> 
 		<div class="content">
 <h3>Amendment IX</h3> 
@@ -720,7 +720,7 @@ according to the rules of the common law.</p>
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>10th Amendment</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div> 
 		<div class="content">
 <h3>Amendment X</h3> 
@@ -732,7 +732,7 @@ according to the rules of the common law.</p>
 		<div class="toolbar"> 
 			<h1>11th - 15th</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div> 
 		<div class="content">
 <h3>Amendment XI</h3>
@@ -789,7 +789,7 @@ The Congress shall have the power to enforce this article by appropriate legisla
 		<div class="toolbar"> 
 			<h1>16th - 20th</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div> 
 		<div class="content">
 
@@ -845,7 +845,7 @@ This article shall be inoperative unless it shall have been ratified as an amend
 			<!--a href="#settings" class="button slideup">Settings</a-->
 			<h1>21st - 27th</h1> 
   		  	<a href="#" class="back">Back</a>
-			<a href="#home" class="button flip">Home</a> 
+			<a href="#home" class="button pop">Home</a> 
 		</div> 
 		<div class="content">
 <h3>Amendment XXI</h3> 
