fixed scroll bug

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 
 </head>
 
-<body onLoad="covers.addCovers()" ontouchmove="event.preventDefault()">
+<body onLoad="covers.addCovers()"><!-- ontouchmove="event.preventDefault()"-->
 
 	<div id="home" class="current"> 
 		<div class="toolbar"> 
