interface and layout updates: background and rounded corners on text panels

--- a/public/index.html
+++ b/public/index.html
@@ -154,7 +154,7 @@
   		  	<a href="#" class="back">Back</a>
 			<!--a href="#about" class="button pop">About</a--> 
 		</div>
-<div class="content">
+<div class="content menu">
 
 <ul class="rounded">
 <li class="arrow"><a href="#pre" class="pop">Preamble</a></li>
@@ -515,7 +515,7 @@ All legislative Powers herein granted shall be vested in a Congress of the Unite
   		  	<a href="#" class="back">Back</a>
 			<!--a href="#about" class="button pop">About</a--> 
 		</div> 
-		<div class="content">
+		<div class="content menu">
 <ul class="rounded">
 <li class="arrow"><a href="#bofrpre" class="pop">Preamble</a></li>
 <li class="arrow"><a href="#a1-a10" class="pop">Bill of Rights 1-10</a></li>
@@ -552,7 +552,7 @@ All legislative Powers herein granted shall be vested in a Congress of the Unite
   		  	<a href="#" class="back">Back</a>
 			<a href="#home" class="button pop">Home</a> 
 		</div> 
-		<div class="content">
+		<div class="content menu">
 <p class="note-top">The following text is a transcription of the first ten amendments to the Constitution in their original form. These amendments were ratified December 15, 1791, and form what is known as the &quot;Bill of Rights.&quot;</p> 
 
 <ul class="rounded">
