interface and layout updates: fixed toobar height and added -moz-radius attributes for firefox

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,8 @@
 
 </head>
 
-<body onLoad="covers.addCovers()"><!-- ontouchmove="event.preventDefault()"-->
+<body onLoad="history.replaceState({}, document.title, "/home")">
+<!--onLoad="covers.addCovers()" ontouchmove="event.preventDefault()"-->
 
 	<div id="home" class="current"> 
 		<div class="toolbar"> 
