--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,8 @@
 
 </head>
 
-<body onLoad="history.replaceState({}, document.title, "/home")">
-<!--onLoad="covers.addCovers()" ontouchmove="event.preventDefault()"-->
+<body>
+<!--onLoad="history.replaceState({}, document.title, "/usc")" onLoad="covers.addCovers()" ontouchmove="event.preventDefault()"-->
 
 	<div id="home" class="current"> 
 		<div class="toolbar"> 
