Bundle update rails 2.3.15

--- a/public/index.html
+++ b/public/index.html
@@ -915,7 +915,13 @@ The Congress shall have power to enforce this article by appropriate legislation
 		<p>By <a href="http://www.marcshifflett.com" target="_blank">Marc Shifflett</a><br />
         Follow me <a href="http://twitter.com/mashcode" target="_blank">on Twitter</a>
         </p>
-        <p><a href="#" class="grayButton goback">Close</a></p>
+        <!--p><a href="#" class="grayButton goback">Close</a></p-->
+
+ 	    <nav class="b-toggle"> 
+		<a class="bot goback" href="#"></a> 
+		<a class="top goback" href="#box"></a> 
+	    </nav> 
+        
         </div>
 	</div> 
 
